fix(RateStars): sparks should be clipped (#365)
* fix(RateStars): sparks should be clipped

* fix

--- a/packages/ui/src/Rate/RateStars/RateStars.module.scss
+++ b/packages/ui/src/Rate/RateStars/RateStars.module.scss
@@ -46,7 +46,7 @@
 
 .spark {
   color: var(--ui-color-warning);
-  transform: translate3d(-.28em, -.05em, 0);
+  transform: translate3d(-0.12em, -0.05em, 0);
   position: relative;
 
   & > * {
